# base-common

./: .gitattributes  .gitignore  CMakeLists.txt  NOTICE.txt  README.md
cmake/: common.cmake  dependencies.cmake
cmake/buildtool/: buildtool.cmake  dependencies.cmake  macros.cmake
cmake/toolchain/: clang350_linux64.cmake
cmake/toolchain/borland45/: _win32.cmake  bcc32.cmd  tlib.cmd
cmake/toolchain/watcom10/: _win32.cmake  wcc386.cmd  wlib.cmd  wlink.cmd
lib/lua/: CMakeLists.txt  _util.c  lapi.c  lauxlib.c  lauxlib.h  lbaselib.c  ldblib.c  ldebug.c  ldo.c  lfunc.c  lgc.c  linit.c  liolib.c  llex.c  llimits.h  lmem.c  loadlib.c  lobject.c  loslib.c  lparser.c  lstate.c  lstring.h  lstrlib.c  ltable.c  ltablib.c  ltm.c  lua.c  lua.h  luac.c  luaconf.h  lualib.h  lutf8lib.c  lvm.c
lib/pstdint/: pstdint.h
src/: CMakeLists.txt
src/drunkfly/: buff.c  buff.h  common.c  common.h  vm.c  vm.h
src/tests/: CMakeLists.txt
tests/: CMakeLists.txt  main.c  pstdint.c  vm.c
